# hallucinator

./: .gitignore  CLAUDE.md  Dockerfile  MANIFESTO.md  PLAN-issue-45.md  README.md  app-rs.py  app.py  check_hallucinated_references.py  dblp_offline.py  evaluate_parsing_rs.py  requirements-dev.txt
.github/workflows/: ci.yml  python-wheels.yml  release.yml
docs/: SUMMARY.md  book.toml  introduction.md  tui-design.md
docs/api-reference/: database-backends.md  python-bindings.md  rust-crates.md
docs/architecture/: concurrency.md  crate-map.md  data-flow.md  overview.md
docs/user-guide/: configuration.md  export-formats.md  getting-started.md  offline-databases.md  understanding-results.md
hallucinator-rs/: .gitignore  Cargo.toml  HANDOFF.md  PYTHON_BINDINGS.md  README.md  dist-workspace.toml  pyproject.toml
hallucinator-rs/crates/hallucinator-acl/: Cargo.toml
hallucinator-rs/crates/hallucinator-acl/src/: builder.rs  db.rs  lib.rs  query.rs  xml_parser.rs
hallucinator-rs/crates/hallucinator-bbl/: Cargo.toml
hallucinator-rs/crates/hallucinator-bbl/src/: lib.rs
hallucinator-rs/crates/hallucinator-cli/: Cargo.toml
hallucinator-rs/crates/hallucinator-cli/src/: main.rs  output.rs
hallucinator-rs/crates/hallucinator-core/: Cargo.toml
hallucinator-rs/crates/hallucinator-core/src/: authors.rs  backend.rs  cache.rs  checker.rs  config_file.rs  doi.rs  lib.rs  matching.rs  orchestrator.rs  pool.rs  rate_limit.rs  retraction.rs  text_utils.rs
hallucinator-rs/crates/hallucinator-core/src/db/: acl.rs  arxiv.rs  crossref.rs  dblp.rs  doi_resolver.rs  europe_pmc.rs  mock.rs  mod.rs  neurips.rs  openalex.rs  openalex_offline.rs  pubmed.rs  searxng.rs  semantic_scholar.rs  ssrn.rs
hallucinator-rs/crates/hallucinator-core/tests/: pool_integration.rs
hallucinator-rs/crates/hallucinator-dblp/: Cargo.toml
hallucinator-rs/crates/hallucinator-dblp/src/: builder.rs  db.rs  lib.rs  parser.rs  query.rs  xml_parser.rs
hallucinator-rs/crates/hallucinator-ingest/: Cargo.toml
hallucinator-rs/crates/hallucinator-ingest/src/: archive.rs  lib.rs
hallucinator-rs/crates/hallucinator-openalex/: Cargo.toml
hallucinator-rs/crates/hallucinator-openalex/src/: builder.rs  lib.rs  metadata.rs  query.rs  s3.rs
hallucinator-rs/crates/hallucinator-parsing/: Cargo.toml
hallucinator-rs/crates/hallucinator-parsing/examples/: debug_f1_zero.rs  evaluate_extraction.rs  evaluate_per_ref.rs  evaluate_scoring.rs  optimize_weights.rs  show_refs_section.rs
hallucinator-rs/crates/hallucinator-parsing/src/: authors.rs  config.rs  extractor.rs  identifiers.rs  lib.rs  scoring.rs  section.rs  text_processing.rs  title.rs
hallucinator-rs/crates/hallucinator-parsing/tests/: bbl_ground_truth.rs  neurips_python_parity.rs
hallucinator-rs/crates/hallucinator-pdf/: Cargo.toml
hallucinator-rs/crates/hallucinator-pdf-mupdf/: Cargo.toml
hallucinator-rs/crates/hallucinator-pdf-mupdf/src/: lib.rs
hallucinator-rs/crates/hallucinator-pdf/examples/: debug_f1_zero.rs  evaluate_extraction.rs  evaluate_per_ref.rs  evaluate_scoring.rs  optimize_weights.rs  show_refs_section.rs
hallucinator-rs/crates/hallucinator-pdf/src/: archive.rs  authors.rs  backend.rs  config.rs  extract.rs  extractor.rs  identifiers.rs  lib.rs  scoring.rs  section.rs  text_processing.rs  title.rs
hallucinator-rs/crates/hallucinator-pdf/tests/: bbl_ground_truth.rs  neurips_python_parity.rs
hallucinator-rs/crates/hallucinator-python/: Cargo.toml
hallucinator-rs/crates/hallucinator-python/src/: archive.rs  config.rs  errors.rs  extractor.rs  lib.rs  types.rs  validation_types.rs  validator.rs
hallucinator-rs/crates/hallucinator-reporting/src/: export.rs
hallucinator-rs/crates/hallucinator-tui/: Cargo.toml
hallucinator-rs/crates/hallucinator-tui/src/: action.rs  app.rs  backend.rs  config_file.rs  export.rs  input.rs  load.rs  main.rs  persistence.rs  theme.rs  tips.txt  tui_event.rs
hallucinator-rs/crates/hallucinator-tui/src/app/: backend.rs  mod.rs  processing.rs  tests.rs  update.rs  update_config.rs  update_file_picker.rs  util.rs
hallucinator-rs/crates/hallucinator-tui/src/model/: activity.rs  config.rs  mod.rs  paper.rs  queue.rs
hallucinator-rs/crates/hallucinator-tui/src/view/: activity.rs  banner.rs  config.rs  config_confirm.rs  detail.rs  export.rs  file_picker.rs  help.rs  mod.rs  paper.rs  queue.rs  quit_confirm.rs
hallucinator-rs/crates/hallucinator-web/: Cargo.toml
hallucinator-rs/crates/hallucinator-web/src/: archive.rs  main.rs  models.rs  state.rs  template.rs  upload.rs
hallucinator-rs/crates/hallucinator-web/src/handlers/: index.rs  mod.rs  retry.rs  stream.rs
hallucinator-rs/python/examples/: basic_usage.py  batch_validate.py  custom_regexes.py  ieee_fps_regexps.py  regexp_improvements.py  step_by_step.py  validate_references.py
hallucinator-rs/python/hallucinator/: __init__.py  __init__.pyi  _native.pyi
hallucinator-rs/tests/: test_python_bindings.py  test_validation_bindings.py
legacy/: .dockerignore  Dockerfile  app.py  check_hallucinated_references.py  evaluate_parsing.py  pyproject.toml  requirements.txt
legacy/templates/: index.html
legacy/tests/: __init__.py
legacy/tests/fixtures/: mock_responses.py
legacy/tests/integration/: __init__.py  test_flask_app.py  test_pdf_extraction.py
legacy/tests/unit/: test_author_validation.py  test_cancellation.py  test_dblp_offline.py  test_hyphenation.py  test_normalization.py  test_query_words.py  test_reference_section.py  test_sentence_splitting.py  test_title_extraction.py
templates/: index.html
tests/: conftest.py
tests/fixtures/: __init__.py  reference_samples.py
tests/integration/: test_database_queries.py  test_pdf_extraction.py
tests/unit/: __init__.py  test_author_extraction.py  test_ligatures.py  test_reference_segmentation.py
