[workspace]
resolver = "2"
members = [
    "crates/hallucinator-pdf",
    "crates/hallucinator-core",
    "crates/hallucinator-dblp",
    "crates/hallucinator-acl",
    "crates/hallucinator-cli",
    "crates/hallucinator-web",
    "crates/hallucinator-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Internal crates
hallucinator-pdf = { path = "crates/hallucinator-pdf" }
hallucinator-core = { path = "crates/hallucinator-core" }
hallucinator-dblp = { path = "crates/hallucinator-dblp" }
hallucinator-acl = { path = "crates/hallucinator-acl" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = { version = "0.7" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# CLI
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
indicatif = "0.17"

# PDF
mupdf = "0.6"

# Text processing
regex = "1"
once_cell = "1"
rapidfuzz = "0.5"

# HTML/XML parsing
scraper = "0.22"
quick-xml = { version = "0.37", features = ["encoding"] }

# Archive handling
zip = "2"
tar = "0.4"
flate2 = "1"

# Environment
dotenvy = "0.15"

# Streaming
tokio-stream = "0.1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }

# Temp files
tempfile = "3"

# Channels
async-channel = "2"

# TUI
ratatui = "0.29"

# Encoding
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"
