[workspace]
resolver = "2"
members = [
    "crates/hallucinator-pdf",
    "crates/hallucinator-bbl",
    "crates/hallucinator-core",
    "crates/hallucinator-dblp",
    "crates/hallucinator-acl",
    "crates/hallucinator-cli",
    "crates/hallucinator-tui",
    "crates/hallucinator-reporting",
]
exclude = [
    # Python bindings are built separately via maturin; exclude from workspace
    # to avoid pyo3 compile errors when the system Python version exceeds what
    # pyo3 supports (e.g. Python 3.14 on macOS CI runners).
    "crates/hallucinator-python",
    # Web server is not distributed as a binary; exclude to avoid compiling
    # its dependencies (axum, tower, etc.) during dist builds.
    "crates/hallucinator-web",
]

[workspace.package]
version = "0.1.1-alpha.2"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/gianlucasb/hallucinator"

[workspace.dependencies]
# Internal crates
hallucinator-pdf = { path = "crates/hallucinator-pdf", default-features = false }
hallucinator-bbl = { path = "crates/hallucinator-bbl" }
hallucinator-core = { path = "crates/hallucinator-core" }
hallucinator-dblp = { path = "crates/hallucinator-dblp" }
hallucinator-acl = { path = "crates/hallucinator-acl" }
hallucinator-reporting = { path = "crates/hallucinator-reporting" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = { version = "0.7" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# CLI
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
indicatif = "0.17"

# PDF
mupdf = "0.6"

# Text processing
regex = "1"
once_cell = "1"
rapidfuzz = "0.5"

# HTML/XML parsing
scraper = "0.22"
quick-xml = { version = "0.37", features = ["encoding"] }

# Archive handling
zip = "2"
tar = "0.4"
flate2 = "1"

# Environment
dotenvy = "0.15"

# Streaming
tokio-stream = "0.1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }

# Temp files
tempfile = "3"

# Channels
async-channel = "2"

# Rate limiting
governor = "0.8"
arc-swap = "1"
fastrand = "2"

# TUI
ratatui = "0.29"

# Encoding
base64 = "0.22"

# BibTeX parsing
biblatex = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
