[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hallucinator"
version = "0.1.0"
description = "Detect hallucinated references in academic papers"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"

[tool.maturin]
manifest-path = "crates/hallucinator-python/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "hallucinator._native"
python-source = "python"
