[package]
name = "hallucinator-bbl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BibTeX .bbl file parser for hallucinated reference detection"

[package.metadata.dist]
dist = false

[dependencies]
hallucinator-pdf.workspace = true
biblatex.workspace = true
regex.workspace = true
once_cell.workspace = true
thiserror.workspace = true
