[package]
name = "hallucinator-pdf-mupdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MuPDF backend for hallucinator PDF extraction (AGPL-3.0 isolation layer)"

[package.metadata.dist]
dist = false

[dependencies]
hallucinator-core.workspace = true
mupdf.workspace = true
