[package]
name = "hallucinator-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PDF extraction and reference parsing for hallucinated reference detection"

[dependencies]
mupdf.workspace = true
regex.workspace = true
once_cell.workspace = true
thiserror.workspace = true
