[package]
name = "hallucinator-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PDF extraction and reference parsing for hallucinated reference detection"

[package.metadata.dist]
dist = false

[features]
# Kept as an empty no-op for backward compatibility with consumers that
# still specify features = ["pdf"]. mupdf is now in hallucinator-pdf-mupdf.
default = []
pdf = []

[dependencies]
hallucinator-core.workspace = true
regex.workspace = true
once_cell.workspace = true
thiserror.workspace = true

[dev-dependencies]
hallucinator-bbl = { workspace = true }
hallucinator-core = { workspace = true }
mupdf = { workspace = true }
rapidfuzz = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
