[package]
name = "hallucinator-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for hallucinator PDF reference extraction"

[package.metadata.dist]
dist = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = ["pdf"]
pdf = ["hallucinator-pdf/pdf"]

[dependencies]
hallucinator-pdf = { workspace = true }
hallucinator-core = { workspace = true }
hallucinator-dblp = { workspace = true }
hallucinator-acl = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
pyo3 = { workspace = true }
tempfile = { workspace = true }
