[package]
name = "hallucinator-python"
version = "0.1.1-alpha.5"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Python bindings for hallucinator reference extraction"

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = ["pdf"]
pdf = ["hallucinator-ingest/pdf"]

[dependencies]
hallucinator-parsing = { path = "../hallucinator-parsing" }
hallucinator-pdf-mupdf = { path = "../hallucinator-pdf-mupdf" }
hallucinator-ingest = { path = "../hallucinator-ingest" }
hallucinator-core = { path = "../hallucinator-core" }
hallucinator-dblp = { path = "../hallucinator-dblp" }
hallucinator-acl = { path = "../hallucinator-acl" }
hallucinator-openalex = { path = "../hallucinator-openalex" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"
pyo3 = { version = "0.23", features = ["extension-module"] }
tempfile = "3"
