[package]
name = "hallucinator-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ratatui-based terminal UI for batch hallucinated reference detection"
repository.workspace = true

[[bin]]
name = "hallucinator-tui"
path = "src/main.rs"

[dependencies]
hallucinator-core.workspace = true
hallucinator-ingest.workspace = true
hallucinator-pdf = { workspace = true, features = ["pdf"] }
hallucinator-bbl.workspace = true
hallucinator-dblp.workspace = true
hallucinator-acl.workspace = true
hallucinator-reporting.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
clap.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
indicatif.workspace = true
tempfile.workspace = true
base64.workspace = true
async-channel.workspace = true
mimalloc = { workspace = true, optional = true }
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
mimalloc = ["dep:mimalloc"]
