[package]
name = "hallucinator-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum web server with SSE streaming for hallucinated reference detection"

[package.metadata.dist]
dist = false

[dependencies]
hallucinator-core.workspace = true
hallucinator-pdf = { workspace = true, features = ["pdf"] }
hallucinator-dblp.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tempfile.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
