[package]
name = "hallucinator-web"
version = "0.1.1-alpha.2"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Axum web server with SSE streaming for hallucinated reference detection"

[package.metadata.dist]
dist = false

[dependencies]
hallucinator-core = { path = "../hallucinator-core" }
hallucinator-pdf = { path = "../hallucinator-pdf", features = ["pdf"] }
hallucinator-dblp = { path = "../hallucinator-dblp" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = "0.7"
tokio-stream = "0.1"
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
